# Sistema-Bases

./: .env  .gitignore  ANALISE_UNIFICACAO.md
Automacao_Tabelionato/: .env  .env_exemplo  .gitignore  fluxo_completo.bat  run_tabelionato.bat
Automacao_Tabelionato/Docs/: README.md  release_readiness.md
Automacao_Tabelionato/src/: __init__.py  extrair_base_tabelionato.py  tratamento_max.py  tratamento_tabelionato.py
Automacao_Tabelionato/tests/: relatorio_cpfs_batimento_vs_max78.csv
Automacao_Vic/: .gitignore  main.py  run_completo.bat  run_pipeline.bat
Automacao_Vic/docs/: ATUALIZACAO_FINAL.md  BATIMENTO_PROCESSOR.md  INDICE_DOCUMENTACAO.md  PORTABILIDADE.md  README.md  VALIDACAO_TAMANHO_VIC.md  VIC_PROCESSOR.md
Automacao_Vic/scripts/: extrair_basemax.py
Automacao_Vic/src/: __init__.py
Automacao_Vic/tests/: test_aging.py  test_anti_join_outputs.py  test_baixa.py  test_blacklist.py  test_devolucao_integration.py  test_helpers.py  test_simulacao_extracao_vic.py  test_validacao_tamanho_vic.py
Bases referencia/Automacao_Tabelionato/: requirements.txt
Bases referencia/Automacao_Vic/: README.md  config.yaml  env.example  requirements.txt  setup_project.bat
Bases referencia/Emccamp/: .env.example  README.md  (+2 more)
Emccamp/: .gitignore  enriquecimento_contato.py  main.py  requirements.txt  run_pipeline_emccamp.bat
docs/: ARQUITETURA_TECNICA.md
unified/: .env  .env.example  DOCUMENTATION.md  README.md  main_vic.py  requirements.txt  run_pipeline.py  test_vic_email.py
unified/tests/: analyze_schemas.py  debug_pipeline.py  debug_validators.py  pyproject.toml  schema_output.txt  test_emccamp_validation.py  test_max_load.py  test_tabelionato_load.py
(+179 files in other folders)
